--- a/4_DICOM_NIFTI/TP4_UnderstandingDICOM.ipynb
+++ b/4_DICOM_NIFTI/TP4_UnderstandingDICOM.ipynb
@@ -65,10 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "582b30e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zip file not found: /path/to/your/dicom_files.zip\n"
+     ]
+    }
+   ],
    "source": [
     "import zipfile\n",
     "import os\n",
@@ -97,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "34f036ef",
    "metadata": {},
    "outputs": [],
@@ -111,14 +119,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "6a99aa0b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load a DICOM file\n",
     "\n",
-    "# -- Your code here -- #"
+    "file_path = r\"C:/Users/tajan/Documents/COURS/ImageProcessing/4_DICOM_NIFTI/DICOM/IM-0004-0001.dcm\"\n",
+    "dicom_file = pydicom.dcmread(file_path)"
    ]
   },
   {
@@ -137,9 +146,21 @@
    "execution_count": null,
    "id": "c5c8efbe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dicom_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28mprint\u001b[39m (\u001b[43mdicom_data\u001b[49m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'dicom_data' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "print (dicom_data)"
+    "print(dicom_file)"
    ]
   },
   {
@@ -563,7 +584,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -577,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
